# ghostcell

./: Cargo.toml  README.md
ghostcell/: Cargo.toml
ghostcell/src/: lib.rs
ghostcell_macro/: Cargo.toml
ghostcell_macro/src/: entry.rs  lib.rs
ghostcell_macro/tests/: compile.rs
ghostcell_macro/tests/ui/: 01-parse.rs  02-multi.rs
